# brouclean-fantasy-games

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  logo.xcf  logo_horizontal.xcf
assets/: manifest.webmanifest
migrations/: 0001_auth.sql  0002_BB_Teams.sql  0003_BB_Games.sql  0004_BB_Advancement_Injuries.sql  0004_BB_Advancements.sql  0005_BB_Competitions.sql  0006_BB_Players_Hatred.sql  0007_BB_Special_Rules.sql  0008_RPG_Characters.sql  0009_RPG_Campaigns.sql  0010_BB_ELO.sql  0011_BB_Competitions_offseasons.sql  0012_BB_Raise_the_dead.sql
src/: app.rs  auth.rs  data.rs  errors.rs  main.rs  oauth.rs
src/app/: blood_bowl.rs  handlers.rs  templates.rs  users.rs
src/app/blood_bowl/: rosters.rs
src/app/handlers/: blood_bowl.rs  role_playing_games.rs  users.rs
src/app/templates/: blood_bowl.rs  role_playing_games.rs  shared.rs  users.rs
src/auth/: google.rs
src/data/: blood_bowl.rs  role_playing_games.rs  sessions.rs  users.rs
src/data/blood_bowl/: coaches.rs  competitions.rs  games.rs  players.rs  staff.rs  statistics.rs  teams.rs
src/data/role_playing_games/: campaigns.rs  characters.rs  games.rs  profiles.rs
templates/: alert_message.html  breadcrumb.html  google_button.html  home_page.html  navigation_bar.html  page_base.html  welcome.html
templates/blood_bowl/: home_page.html  roster.html  roster_page.html  rosters.html
templates/blood_bowl/competitions/: close_competition_modal.html  close_competition_modal_button.html  competition_information.html  competition_page.html  competition_schedule.html  competition_stages.html  competition_standings.html  competition_statistics.html  competitions_page.html  new_competition_button.html  owned_competitions_block.html
templates/blood_bowl/games/: game_card.html  game_event_controller.html  game_page.html  game_sequence.html  game_statistics.html  games_by_year_month.html  games_page.html  games_schedule_table.html  new_game_page.html  pre_game_sequence.html  team_event_controller.html  team_statistics.html
templates/blood_bowl/players/: player_advancement.html  player_advancement_bloc.html  player_page.html
templates/blood_bowl/rosters/: roster_page.html  rosters_page.html
templates/blood_bowl/stars/: star_page.html  stars_page.html
templates/blood_bowl/statistics/: coaches_elo_ranking.html  players_top_statistics_lists.html  statistic_list.html  statistics_page.html  teams_statistic_list.html  teams_top_statistics_lists.html
templates/blood_bowl/teams/: former_players.html  new_team_page.html  owned_teams_block.html  team_card.html  team_contracts.html  team_contracts_validation_modal.html  team_filtered_list.html  team_page.html  team_players_contracts_table.html  team_results.html  team_selector.html  team_sheet.html  team_statistics.html  teams_page.html
templates/role_playing_games/: home_page.html
templates/role_playing_games/campaigns/: add_new_campaign_button.html  (+7 more)
templates/shared/: delete_modal_button_content.html  modal_button.html
templates/users/: user_page.html
(+53 files in other folders)
