[package]
name = "brouclean-fantasy-games"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.16"
askama_web = { version = "0.16", features = ["axum-0.8"] }
axum = { version = "0.8", features = ["multipart", "macros", "query"] }
axum-extra = { version = "0.12", features = ["cookie-private"] }
blood-bowl-rs = { git = "https://github.com/Brouclean-Softwares/blood-bowl-rs.git" }
#blood-bowl-rs = { path = "../blood-bowl-rs" }
chrono = { version = "0.4", features = ["clock"] }
dotenv = "0.15"
http = "1.4"
lazy_static = "1.5"
oauth2 = "5.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.9", features = ["postgres", "runtime-tokio", "tls-rustls", "macros", "chrono"] }
thiserror = "2.0"
tokio = { version = "1.52", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
